# LineDream

./: .gitignore  Pipfile  README.md  _requirements_dev.txt  benchmark.py  example.py  main.py  port_old_code.py  pyproject.toml  requirements.txt  requirements_dev.txt  setup.py  translate_test.py  tt.py
CreativeLib/: __init__.py
CreativeLib/enviornment/: Canvas.py
CreativeLib/shapes/: BaseShape.py  Ellipse.py  Path.py  Rectangle.py
LineDream/: __init__.py  __main__.py  __version__.py
LineDream/enviornment/: Canvas.py  Tweaks.py  window.html
LineDream/helpers/: CircleMath.py
LineDream/primitives/: BaseShape.py  Ellipse.py  Group.py  Line.py  Rectangle.py  Text.py  TextLine.py  TextPaths.py
LineDream/primitives/hershey/: hershey.py  hershey_v3.py
LineDream/shapes/: BaseShape.py  Ellipse.py  Path.py  TextPaths.py  TextShape.py
LineDream/shapes/hershey/: hershey.py  inkex.py
Shaper/enviornment/: Canvas.py
docs/: Canvas.rst  Example.rst  Installation.rst  Primitives.rst  PrimitivesAttributes.rst  StylingAttributes.rst  build_pdocs.py  build_website.py  conf.py  contents.rst  index.rst
docs/_templates/: module.html.jinja2
docs/primitives/: Primitives.rst
docs/source/css/: bootstrap.css
docs/source/getting-started/: 0_Intro.md  4_Primitives.md  5_PrimitivesAttributes.md  6_StylingAttributes.md
docs/source/static/: example.py
docs/source/templates/: about.html  base_template.html  documentation.html  getting_started.html  index.html  module.html.jinja2
scrawl/: __init__.py
tests/: readme.md  test.py  test_all.py
(+30 files in other folders)
